--- a/index.html
+++ b/index.html
@@ -517,21 +517,30 @@
             <div class="swiper-slide">
               <div
                 class="image"
-                style="background-image: url('https://picsum.photos/200/300');"
+                style="background-image: url('./uploads/projects/FrontEnd/quiz.png');"
               >
-                <h3>Blog UI Blog</h3>
+                <h3>Quiz</h3>
               </div>
               <div class="content">
                 <div class="description">
                   <h4>Description</h4>
-                  <span>aplikacia aris ecomerce aqvs damateba washla redaqtireba </span>
+                  <span>
+                    Quiz application.
+                    You can choose the difficulty.
+                    You can also select a category of tests.
+                    Understand the answers to the questions asked.
+                    Find the correct and incorrect answers.
+                  </span>
                 </div>
                 <div class="technology">
                   <h4>Used Technologies</h4>
-                  <span>React Node Redux Redux Redux Redux</span>
+                  <span>JavaScript, HTML, CSS, opentdb.com</span>
                 </div>
                 <div class="link">
-                  <a href="">Read More</a>
+                  <a
+                    href="https://github.com/Mishka-Sakhelashvili/JS__Quiz"
+                    target="_blank"
+                  >Read Code</a>
                 </div>
               </div>
             </div>
@@ -539,21 +548,29 @@
             <div class="swiper-slide">
               <div
                 class="image"
-                style="background-image: url('https://picsum.photos/200/300');"
+                style="background-image: url('./uploads/projects/FrontEnd/news.jpg');"
               >
-                <h3>Blog UI Blog</h3>
+                <h3>News</h3>
               </div>
               <div class="content">
                 <div class="description">
                   <h4>Description</h4>
-                  <span>aplikacia aris ecomerce aqvs damateba washla redaqtireba </span>
+                  <span>
+                    The app executes voice commands.
+                    Used AlanAi Rest API.
+                    The site shows a list of different types of news.
+                    Which we can control with both mouse and voice commands
+                  </span>
                 </div>
                 <div class="technology">
                   <h4>Used Technologies</h4>
-                  <span>React Node Redux Redux Redux Redux</span>
+                  <span>React, AlanAi, Material UI</span>
                 </div>
                 <div class="link">
-                  <a href="">Read More</a>
+                  <a
+                    href="https://github.com/Mishka-Sakhelashvili/React__VoiceMan"
+                    target="_blank"
+                  >Read Code</a>
                 </div>
               </div>
             </div>
@@ -561,21 +578,28 @@
             <div class="swiper-slide">
               <div
                 class="image"
-                style="background-image: url('https://picsum.photos/200/300');"
+                style="background-image: url('./uploads/projects/FrontEnd/crypto.jpeg');"
               >
-                <h3>Blog UI Blog</h3>
+                <h3>Crypto</h3>
               </div>
               <div class="content">
                 <div class="description">
                   <h4>Description</h4>
-                  <span>aplikacia aris ecomerce aqvs damateba washla redaqtireba </span>
+                  <span>
+                    The site shows real-time statistics of the top 10 cryptocurrencies.
+                    The current price is displayed, as well as its value statistics for 24 hours.
+                    Total capitalization, the total dollar market value of a company's outstanding shares of stock.
+                  </span>
                 </div>
                 <div class="technology">
                   <h4>Used Technologies</h4>
-                  <span>React Node Redux Redux Redux Redux</span>
+                  <span>React, Styled Components</span>
                 </div>
                 <div class="link">
-                  <a href="">Read More</a>
+                  <a
+                    href="https://github.com/Mishka-Sakhelashvili/React__Crypto"
+                    target="_blank"
+                  >Read Code</a>
                 </div>
               </div>
             </div>
@@ -583,21 +607,28 @@
             <div class="swiper-slide">
               <div
                 class="image"
-                style="background-image: url('https://picsum.photos/200/300');"
+                style="background-image: url('./uploads/projects/FrontEnd/covid.jpg');"
               >
-                <h3>Blog UI Blog</h3>
+                <h3>COVID-19</h3>
               </div>
               <div class="content">
                 <div class="description">
                   <h4>Description</h4>
-                  <span>aplikacia aris ecomerce aqvs damateba washla redaqtireba </span>
+                  <span>
+                    The app shows Covid 19 real-time statistics.
+                    It is possible to view different diagrams to better understand the data.
+                    We can also find data from different countries.
+                  </span>
                 </div>
                 <div class="technology">
                   <h4>Used Technologies</h4>
-                  <span>React Node Redux Redux Redux Redux</span>
+                  <span>React, chartjs, axios, material UI </span>
                 </div>
                 <div class="link">
-                  <a href="">Read More</a>
+                  <a
+                    href="https://github.com/Mishka-Sakhelashvili/React__Covd19"
+                    target="_blank"
+                  >Read Code</a>
                 </div>
               </div>
             </div>
@@ -605,21 +636,28 @@
             <div class="swiper-slide">
               <div
                 class="image"
-                style="background-image: url('https://picsum.photos/200/300');"
+                style="background-image: url('./uploads/projects/FrontEnd/teach.jpg');"
               >
-                <h3>Blog UI Blog</h3>
+                <h3>Training</h3>
               </div>
               <div class="content">
                 <div class="description">
                   <h4>Description</h4>
-                  <span>aplikacia aris ecomerce aqvs damateba washla redaqtireba </span>
+                  <span>
+                    The application has a registration & authorization function.
+                    Various features of fast filtering.
+                    Find the training programs we want and understand the target price.
+                  </span>
                 </div>
                 <div class="technology">
                   <h4>Used Technologies</h4>
-                  <span>React Node Redux Redux Redux Redux</span>
+                  <span>Vue, Vuex, vue router, core</span>
                 </div>
                 <div class="link">
-                  <a href="">Read More</a>
+                  <a
+                    href="https://github.com/Mishka-Sakhelashvili/VUE3__List-Of-Training-Programs"
+                    target="_blank"
+                  >Read Code</a>
                 </div>
               </div>
             </div>
@@ -627,21 +665,29 @@
             <div class="swiper-slide">
               <div
                 class="image"
-                style="background-image: url('https://picsum.photos/200/300');"
+                style="background-image: url('./uploads/projects/FrontEnd/shop.png');"
               >
-                <h3>Blog UI Blog</h3>
+                <h3>Online Shop</h3>
               </div>
               <div class="content">
                 <div class="description">
                   <h4>Description</h4>
-                  <span>aplikacia aris ecomerce aqvs damateba washla redaqtireba </span>
+                  <span>
+                    The app is in the online shopping category.
+                    The commerc.js admin panel is used for management.
+                    The stripe payment system is installed.
+                    The app is a demo version.
+                  </span>
                 </div>
                 <div class="technology">
                   <h4>Used Technologies</h4>
-                  <span>React Node Redux Redux Redux Redux</span>
+                  <span>React, commerce.js, material UI, Stripe, Router</span>
                 </div>
                 <div class="link">
-                  <a href="">Read More</a>
+                  <a
+                    href="https://github.com/Mishka-Sakhelashvili/React__Online-Shop-Commerce.js"
+                    target="_blank"
+                  >Read Code</a>
                 </div>
               </div>
             </div>
@@ -649,21 +695,60 @@
             <div class="swiper-slide">
               <div
                 class="image"
-                style="background-image: url('https://picsum.photos/200/300');"
+                style="background-image: url('./uploads/projects/FrontEnd/blog.jpg');"
               >
-                <h3>Blog UI Blog</h3>
+                <h3>Blog</h3>
               </div>
               <div class="content">
                 <div class="description">
                   <h4>Description</h4>
-                  <span>aplikacia aris ecomerce aqvs damateba washla redaqtireba </span>
+                  <span>
+                    You can find different types of blogs on the website.
+                    Both read the text and view the cover image.
+                    It is possible to register / authorize,
+                    after which we can add / edit / delete our posts
+                  </span>
                 </div>
                 <div class="technology">
                   <h4>Used Technologies</h4>
-                  <span>React Node Redux Redux Redux Redux</span>
+                  <span>React, socket.io</span>
                 </div>
                 <div class="link">
-                  <a href="">Read More</a>
+                  <a
+                    href="https://github.com/Mishka-Sakhelashvili/React__Blog"
+                    target="_blank"
+                  >Read Code</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="swiper-slide">
+              <div
+                class="image"
+                style="background-image: url('./uploads/projects/FrontEnd/messenger.png');"
+              >
+                <h3>Messenger</h3>
+              </div>
+              <div class="content">
+                <div class="description">
+                  <h4>Description</h4>
+                  <span>
+                    Messenger clone website
+                    <br>
+                    Has all the basic functionality of an original site.
+                    Sending texts, sorting, storing in the database.
+                    Visually it looks exactly the same as the original
+                  </span>
+                </div>
+                <div class="technology">
+                  <h4>Used Technologies</h4>
+                  <span>React, Material UI, Firebase</span>
+                </div>
+                <div class="link">
+                  <a
+                    href="https://github.com/Mishka-Sakhelashvili/React__Messenger-Clone"
+                    target="_blank"
+                  >Read Code</a>
                 </div>
               </div>
             </div>
@@ -681,109 +766,30 @@
             <div class="swiper-slide">
               <div
                 class="image"
-                style="background-image: url('https://picsum.photos/200/300');"
+                style="background-image: url('./uploads/projects/FrontEnd/messenger.png');"
               >
-                <h3>Blog UI Blog</h3>
+                <h3>Messenger</h3>
               </div>
               <div class="content">
                 <div class="description">
                   <h4>Description</h4>
-                  <span>aplikacia aris ecomerce aqvs damateba washla redaqtireba </span>
+                  <span>
+                    Messenger clone website
+                    <br>
+                    Has all the basic functionality of an original site.
+                    Sending texts, sorting, storing in the database.
+                    Visually it looks exactly the same as the original
+                  </span>
                 </div>
                 <div class="technology">
                   <h4>Used Technologies</h4>
-                  <span>React Node Redux Redux Redux Redux</span>
+                  <span>React, Material UI, Firebase</span>
                 </div>
                 <div class="link">
-                  <a href="">Read More</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="swiper-slide">
-              <div
-                class="image"
-                style="background-image: url('https://picsum.photos/200/300');"
-              >
-                <h3>Blog UI Blog</h3>
-              </div>
-              <div class="content">
-                <div class="description">
-                  <h4>Description</h4>
-                  <span>aplikacia aris ecomerce aqvs damateba washla redaqtireba </span>
-                </div>
-                <div class="technology">
-                  <h4>Used Technologies</h4>
-                  <span>React Node Redux Redux Redux Redux</span>
-                </div>
-                <div class="link">
-                  <a href="">Read More</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="swiper-slide">
-              <div
-                class="image"
-                style="background-image: url('https://picsum.photos/200/300');"
-              >
-                <h3>Blog UI Blog</h3>
-              </div>
-              <div class="content">
-                <div class="description">
-                  <h4>Description</h4>
-                  <span>aplikacia aris ecomerce aqvs damateba washla redaqtireba </span>
-                </div>
-                <div class="technology">
-                  <h4>Used Technologies</h4>
-                  <span>React Node Redux Redux Redux Redux</span>
-                </div>
-                <div class="link">
-                  <a href="">Read More</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="swiper-slide">
-              <div
-                class="image"
-                style="background-image: url('https://picsum.photos/200/300');"
-              >
-                <h3>Blog UI Blog</h3>
-              </div>
-              <div class="content">
-                <div class="description">
-                  <h4>Description</h4>
-                  <span>aplikacia aris ecomerce aqvs damateba washla redaqtireba </span>
-                </div>
-                <div class="technology">
-                  <h4>Used Technologies</h4>
-                  <span>React Node Redux Redux Redux Redux</span>
-                </div>
-                <div class="link">
-                  <a href="">Read More</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="swiper-slide">
-              <div
-                class="image"
-                style="background-image: url('https://picsum.photos/200/300');"
-              >
-                <h3>Blog UI Blog</h3>
-              </div>
-              <div class="content">
-                <div class="description">
-                  <h4>Description</h4>
-                  <span>aplikacia aris ecomerce aqvs damateba washla redaqtireba </span>
-                </div>
-                <div class="technology">
-                  <h4>Used Technologies</h4>
-                  <span>React Node Redux Redux Redux Redux</span>
-                </div>
-                <div class="link">
-                  <a href="">Read More</a>
+                  <a
+                    href="https://github.com/Mishka-Sakhelashvili/React__Messenger-Clone"
+                    target="_blank"
+                  >Read Code</a>
                 </div>
               </div>
             </div>
