--- a/index.html
+++ b/index.html
@@ -766,28 +766,147 @@
             <div class="swiper-slide">
               <div
                 class="image"
-                style="background-image: url('./uploads/projects/FrontEnd/messenger.png');"
+                style="background-image: url('./uploads/projects/FullStack/pdf.png');"
               >
-                <h3>Messenger</h3>
+                <h3>PDF Convert</h3>
               </div>
               <div class="content">
                 <div class="description">
                   <h4>Description</h4>
                   <span>
-                    Messenger clone website
-                    <br>
-                    Has all the basic functionality of an original site.
-                    Sending texts, sorting, storing in the database.
-                    Visually it looks exactly the same as the original
+                    Convert html document to pdf file.
+                    The website provides an example of converting a trade invoice to a PDF file.
+                    The program performs automatic calculations to make it easier for the user to work
                   </span>
                 </div>
                 <div class="technology">
                   <h4>Used Technologies</h4>
-                  <span>React, Material UI, Firebase</span>
+                  <span>Node, express, React, axios</span>
                 </div>
                 <div class="link">
                   <a
-                    href="https://github.com/Mishka-Sakhelashvili/React__Messenger-Clone"
+                    href="https://github.com/Mishka-Sakhelashvili/React__Express-PDF-Generator"
+                    target="_blank"
+                  >Read Code</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="swiper-slide">
+              <div
+                class="image"
+                style="background-image: url('./uploads/projects/FullStack/chat.png');"
+              >
+                <h3>Chat</h3>
+              </div>
+              <div class="content">
+                <div class="description">
+                  <h4>Description</h4>
+                  <span>
+                    A real-time chat component <br>
+                    that can be embedded in a variety of websites.
+                    Has basic correspondence functionality.
+                    Sorts by standard protocol.
+                  </span>
+                </div>
+                <div class="technology">
+                  <h4>Used Technologies</h4>
+                  <span>Node, express, socket.io, React</span>
+                </div>
+                <div class="link">
+                  <a
+                    href="https://github.com/Mishka-Sakhelashvili/React__Node-ChatApp"
+                    target="_blank"
+                  >Read Code</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="swiper-slide">
+              <div
+                class="image"
+                style="background-image: url('./uploads/projects/FullStack/shopejs.jpg');"
+              >
+                <h3>Shop (Ejs)</h3>
+              </div>
+              <div class="content">
+                <div class="description">
+                  <h4>Description</h4>
+                  <span>
+                    Online store server side rendering.
+                    Sign in/ Sign up, has a
+                    customer-friendly admin panel.
+                    The user manages the products. Also controls various operations (e.g. orders, checkout, payment and
+                    etc.)
+                  </span>
+                </div>
+                <div class="technology">
+                  <h4>Used Technologies</h4>
+                  <span>Node, express, ejs, mongoose, nodemailer, stripe</span>
+                </div>
+                <div class="link">
+                  <a
+                    href="https://github.com/Mishka-Sakhelashvili/Node__Online-Shop"
+                    target="_blank"
+                  >Read Code</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="swiper-slide">
+              <div
+                class="image"
+                style="background-image: url('./uploads/projects/FullStack/shopreact.jpg');"
+              >
+                <h3>Shop (React)</h3>
+              </div>
+              <div class="content">
+                <div class="description">
+                  <h4>Description</h4>
+                  <span>
+                    Has all the features that an online store needs.
+                    Customer-friendly admin panel.
+                    The user manages the products.
+                    Also controls various operations (e.g. orders, checkout, delivery, payment and
+                    etc.)
+                  </span>
+                </div>
+                <div class="technology">
+                  <h4>Used Technologies</h4>
+                  <span>Node, express, mongoose, nodemailer, payPal, React </span>
+                </div>
+                <div class="link">
+                  <a
+                    href="https://github.com/Mishka-Sakhelashvili/React__Node__ShopExample"
+                    target="_blank"
+                  >Read Code</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="swiper-slide">
+              <div
+                class="image"
+                style="background-image: url('./uploads/projects/FullStack/Management.jpg');"
+              >
+                <h3>Management</h3>
+              </div>
+              <div class="content">
+                <div class="description">
+                  <h4>Description</h4>
+                  <span>
+                    Product Management Website,
+                    Built on MVC principles, mariadb database is used for data storage,
+                    it is possible to install other databases
+                  </span>
+                </div>
+                <div class="technology">
+                  <h4>Used Technologies</h4>
+                  <span>PHP, MariaDB, SQL, Bootstrap </span>
+                </div>
+                <div class="link">
+                  <a
+                    href="https://github.com/Mishka-Sakhelashvili/PHP__ProductsCrud"
                     target="_blank"
                   >Read Code</a>
                 </div>
