--- a/index.html
+++ b/index.html
@@ -926,7 +926,7 @@
             <div class="swiper-slide">
               <div
                 class="image"
-                style="background-image: url('./uploads/projects/Mobile/shop.jpg');"
+                style="background-image: url('./uploads/projects/Mobile/shoprn.jpg');"
               >
                 <h3>Online Shop</h3>
               </div>
@@ -1110,7 +1110,7 @@
         </div>
 
         <a
-          href="https://github.com/Mishka-Sakhelashvili/All__Projects/blob/main/README.md"
+          href="https://github.com/Mishka-Sakhelashvili?tab=repositories"
           target="_blank"
           class="view-all"
         >View All
