resize project images

--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
             <div class="swiper-slide">
               <div
                 class="image"
-                style="background-image: url('./uploads/projects/FrontEnd/crypto.jpeg');"
+                style="background-image: url('./uploads/projects/FrontEnd/crypto.jpg');"
               >
                 <h3>Crypto</h3>
               </div>
@@ -725,7 +725,7 @@
             <div class="swiper-slide">
               <div
                 class="image"
-                style="background-image: url('./uploads/projects/FrontEnd/messenger.png');"
+                style="background-image: url('./uploads/projects/FrontEnd/messenger.jpg');"
               >
                 <h3>Messenger</h3>
               </div>
@@ -766,7 +766,7 @@
             <div class="swiper-slide">
               <div
                 class="image"
-                style="background-image: url('./uploads/projects/FullStack/pdf.png');"
+                style="background-image: url('./uploads/projects/FullStack/pdf.jpg');"
               >
                 <h3>PDF Convert</h3>
               </div>
@@ -795,7 +795,7 @@
             <div class="swiper-slide">
               <div
                 class="image"
-                style="background-image: url('./uploads/projects/FullStack/chat.png');"
+                style="background-image: url('./uploads/projects/FullStack/chat.jpg');"
               >
                 <h3>Chat</h3>
               </div>
