--- a/index.html
+++ b/index.html
@@ -227,24 +227,40 @@
       <h2 class="title">My services</h2>
       <div class="serv-content">
         <div class="options">
-
           <div class="option activeServ">
             <div class="shadow"></div>
             <div class="label">
               <div class="icon">
-                <i class="fas fa-server"></i>
+                <i class="fas fa-desktop"></i>
               </div>
               <div class="info">
-                <div class="main">Front End Development</div>
+                <div class="main">Web App Development</div>
               </div>
-
-              <div class="text">Manage website development projects from initial design through completion, optimizing
-                all cross-browser and multi-platform compatibility. Work closely with programmers and clients to meet
-                project requirements, goals, and desired functionality.
+              <div class="text">
+                Understands your business objectives and creates top-notch solutions that meet your needs leveraging
+                the best front-end development technologies and practices. I main goal is to engage your customers and
+                deliver robust user experience, build sophisticated web applications, single page applications, and
+                cross-browser and cross-platform websites.
               </div>
             </div>
           </div>
-
+          <div class="option">
+            <div class="shadow"></div>
+            <div class="label">
+              <div class="icon">
+                <i class="fas fa-mobile-alt"></i>
+              </div>
+              <div class="info">
+                <div class="main">Mobile App Development</div>
+              </div>
+              <div class="text">
+                I will design the app architecture, user flow, UX, and UI of your mobile product. My development
+                approach will guarantee that your product will be aligned with your business goals, user needs, and
+                timelines. I follow best industry standards and practices, run thoughtful QA processes, and follow Apple
+                Design and Development Guidelines and Android Design & Quality Standards.
+              </div>
+            </div>
+          </div>
           <div class="option">
             <div class="shadow"></div>
             <div class="label">
@@ -252,133 +268,103 @@
                 <i class="fas fa-server"></i>
               </div>
               <div class="info">
-                <div class="main">Front End Development</div>
+                <div class="main">Back-End Development</div>
               </div>
-
-              <div class="text">Manage website development projects from initial design through completion, optimizing
-                all cross-browser and multi-platform compatibility. Work closely with programmers and clients to meet
-                project requirements, goals, and desired functionality.
+              <div class="text">
+                I build sleek and intuitive web apps with powerful backend systems. Impress your users with well
+                designed and high performance applications. I am ready to help you no matter how complex your
+                application is and work with a variety of datastores (NoSQL & SQL). Working with multiple delivery
+                platforms such as mobile & web.
               </div>
             </div>
           </div>
-
           <div class="option">
             <div class="shadow"></div>
             <div class="label">
               <div class="icon">
-                <i class="fas fa-server"></i>
+                <i class="fas fa-laptop-code"></i>
               </div>
               <div class="info">
-                <div class="main">Front End Development</div>
+                <div class="main">Tech Support & Maintenance</div>
               </div>
-
-              <div class="text">Manage website development projects from initial design through completion, optimizing
-                all cross-browser and multi-platform compatibility. Work closely with programmers and clients to meet
-                project requirements, goals, and desired functionality.
+              <div class="text">
+                Once the development process is over, there is always a place for improvements. And no matter how solid
+                the development effort was, bugs are inevitable. I can be there for you when an unexpected happens and
+                will help you get the most out of your product and bring peace of mind to your staff and customers.
               </div>
             </div>
           </div>
-
           <div class="option">
             <div class="shadow"></div>
             <div class="label">
               <div class="icon">
-                <i class="fas fa-server"></i>
+                <i class="fab fa-google"></i>
               </div>
               <div class="info">
-                <div class="main">Front End Development</div>
+                <div class="main">SEO Optimization</div>
               </div>
-
-              <div class="text">Manage website development projects from initial design through completion, optimizing
-                all cross-browser and multi-platform compatibility. Work closely with programmers and clients to meet
-                project requirements, goals, and desired functionality.
+              <div class="text">
+                Search engine optimization (SEO) refers to the process of improving your site's organic traffic and
+                ranking on search engines such as Google, Bing, and other search engines.
+                This includes creating high-quality content in addition to monitoring your site's technical health.
               </div>
             </div>
           </div>
-
-          <div class="option">
-            <div class="shadow"></div>
-            <div class="label">
-              <div class="icon">
-                <i class="fas fa-server"></i>
-              </div>
-              <div class="info">
-                <div class="main">Front End Development</div>
-              </div>
-
-              <div class="text">Manage website development projects from initial design through completion, optimizing
-                all cross-browser and multi-platform compatibility. Work closely with programmers and clients to meet
-                project requirements, goals, and desired functionality.
-              </div>
-            </div>
-          </div>
-
         </div>
-
         <div class="mobile">
-
           <div class="card">
             <div class="box">
-              <div class="text">Frontend Development</div>
+              <div class="text">Web App Development</div>
               <p>
-                Manage website development projects from initial design through completion, optimizing all cross-browser
-                and multi-platform compatibility. Work closely with programmers and clients to meet project
-                requirements,
-                goals, and desired functionality.
+                Understands your business objectives and creates top-notch solutions that meet your needs leveraging
+                the best front-end development technologies and practices. I main goal is to engage your customers and
+                deliver robust user experience, build sophisticated web applications, single page applications, and
+                cross-browser and cross-platform websites.
               </p>
             </div>
           </div>
-
           <div class="card">
             <div class="box">
-              <div class="text">Backend Development</div>
+              <div class="text">Mobile App Development</div>
               <p>
-                Responsible for defining, developing, and evolving software in a fast paced and agile development
-                environment using the latest software methods and infrastructure. Work with a variety of
-                datastores (NoSQL & SQL). Working with multiple delivery platforms such as mobile & web.
+                I will design the app architecture, user flow, UX, and UI of your mobile product. My development
+                approach will guarantee that your product will be aligned with your business goals, user needs, and
+                timelines. I follow best industry standards and practices, run thoughtful QA processes, and follow Apple
+                Design and Development Guidelines and Android Design & Quality Standards.
               </p>
             </div>
           </div>
-
           <div class="card">
             <div class="box">
-              <div class="text">Backend Development</div>
+              <div class="text">Back-End Development</div>
               <p>
-                Responsible for defining, developing, and evolving software in a fast paced and agile development
-                environment using the latest software methods and infrastructure. Work with a variety of
-                datastores (NoSQL & SQL). Working with multiple delivery platforms such as mobile & web.
-                Responsible for defining, developing, and evolving software in a fast paced and agile development
-                environment using the latest software methods and infrastructure. Work with a variety of
-                datastores (NoSQL & SQL). Working with multiple delivery platforms such as mobile & web.
-                Responsible for defining, developing, and evolving software in a fast paced and agile development
-                environment using the latest software methods and infrastructure. Work with a variety of
-                datastores (NoSQL & SQL). Working with multiple delivery platforms such as mobile & web.
+                I build sleek and intuitive web apps with powerful backend systems. Impress your users with well
+                designed and high performance applications. I am ready to help you no matter how complex your
+                application is and work with a variety of datastores (NoSQL & SQL). Working with multiple delivery
+                platforms such as mobile & web.
               </p>
             </div>
           </div>
-
           <div class="card">
             <div class="box">
-              <div class="text">Backend Development</div>
+              <div class="text">Tech Support & Maintenance</div>
               <p>
-                Responsible for defining, developing, and evolving software in a fast paced and agile development
-                environment using the latest software methods and infrastructure. Work with a variety of
-                datastores (NoSQL & SQL). Working with multiple delivery platforms such as mobile & web.
+                Once the development process is over, there is always a place for improvements. And no matter how solid
+                the development effort was, bugs are inevitable. I can be there for you when an unexpected happens and
+                will help you get the most out of your product and bring peace of mind to your staff and customers.
               </p>
             </div>
           </div>
-
           <div class="card">
             <div class="box">
-              <div class="text">Mobile Development</div>
+              <div class="text">SEO Optimization</div>
               <p>
-                Develop new mobile application on Android and IOS. Develops integration of the core systems or external
-                applications. Develop a method to build and launch applications at a fast pace. Complete code base
-                conversion to React Native with feature parity.
+                Search engine optimization (SEO) refers to the process of improving your site's organic traffic and
+                ranking on search engines such as Google, Bing, and other search engines.
+                This includes creating high-quality content in addition to monitoring your site's technical health.
               </p>
             </div>
           </div>
-
         </div>
       </div>
     </div>
